# router-manager

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: github-workflow-lint.yml  python-app.yml
src/router-manager/: main.py
