[tool.poetry]
name = "router-manager"
version = "1.0.0"
description = ""
authors = ["tokane888 <tokane888@gmail.com>"]
readme = "README.md"
packages = [
    { include = "router-manager", from="src" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
uvicorn = "^0.38.0"
dnspython = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
ruff = "^0.13.3"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# ruff(linter/formatter)の有効ルール。"ALL"は警告が増えすぎたので断念。
# ルール一覧: https://docs.astral.sh/ruff/rules/
lint.select = ["B", "E", "F", "I", "N", "UP", "W"]

# linter対象から除外するディレクトリ。高速化のために指定
exclude=[
    ".git",
    ".github",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pycache__",
    "dist"
]
